--- a/ubiquibot-config-default.json
+++ b/ubiquibot-config-default.json
@@ -1,6 +1,5 @@
 {
-  "network-id": 100,
-  "price-multiplier": 1.5,
+  "base-multiplier": 1.5,
   "issue-creator-multiplier": 2000,
   "time-labels": [
     {
