--- a/.github/ubiquibot-config.yml
+++ b/.github/ubiquibot-config.yml
@@ -1,5 +1,4 @@
 ---
-price-multiplier: 1.5
 time-labels:
   - name: "Time: <1 Hour"
     weight: 0.125
@@ -36,4 +35,4 @@ comment-incentives: true
 max-concurrent-bounties: 2
 promotion-comment: "\n<h6>If you enjoy the DevPool experience, please follow <a href='https://github.com/ubiquity'>Ubiquity on GitHub</a> and star <a href='https://github.com/ubiquity/devpool-directory'>this repo</a> to show your support. It helps a lot!</h6>"
 register-wallet-with-verification: false
-evm-network-id: 100
+network-id: 100
